--- a/password.html
+++ b/password.html
@@ -14,7 +14,8 @@
     <div class="random-password">
         <h1>Generate a <br> <span>Random Password</span></h1>
         <div class="display">
-            <input type="text" id="password" placeholder="password" readonly>
+            <input type="text" id="password" placeholder="password">
+            <i class="fas fa-eye-slash" id="eyeIcon"></i>
             <i class="fas fa-clipboard" id="copy"></i>
         </div>
         <button id="btn">Generate password</button>
@@ -22,4 +23,5 @@
    </div>
     <script src="password.js"></script>
 </body>
+
 </html>
